# gikkon

./: .gitignore  LICENSE  Makefile  PKGBUILD  README.md  backuper.py  config.py  config.toml  git_saver.py  main.py  pyproject.toml  requirements.txt  wrappers.py
.github/workflows/: workflow.yml
src/: __main__.py  backuper.py  config.py  git_saver.py  git_wrapper.py  interactor.py  user_texts.py  validator.py  wrappers.py
tests/: backuper_test.py  config_test.py  git_saver_test.py  test_backuper.py  test_config.py  test_git_saver.py  test_git_wrapper.py  test_interactor.py  test_validator.py  test_wrappers.py  wrappers_test.py
tests/fixtures/: formatting.py
