[tool.poetry]
name = "config_backuper"
version = "0.1.0"
description = "Backup your system configs and keep them up to date"
authors = ["Voronwe <Voronwe.S@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.24"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
