[tool.poetry]
name = "gikkon"
version = "0.1.0"
description = "Backup your system configs and keep them up to date"
authors = ["Voronwe <Voronwe.S@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.24"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[tool.isort]
profile = "black" 


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
