[tool.poetry]
name = "gikkon"
version = "0.2.0"
description = "Backup your system configs and keep them up to date"
authors = ["Voronwe <Voronwe.S@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3"
isort = "^5.10.1"
coverage = "^6.2"
parameterized = "^0.8.1"
autoflake = "^1.4"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py39"]
extend-exclude = "src/dependencies"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
